--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </header>
 
   <!-- About -->
-  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
+  <div class="w3-container w3-padding-large w3-row-padding">
     <h4 id="about"><b>About</b></h4>
     <p>
       I am a fourth-year graduate student in Mathematics at Auburn University studying under <a class="weblink" href="http://webhome.auburn.edu/~hks0015/" target="_blank">Hal Schenck</a>.
@@ -72,7 +72,7 @@
   </div>
 
   <!-- Publications -->
-  <div class="w3-row-padding">
+  <div class="w3-container w3-padding-large w3-row-padding">
     <h4 id="papers"><b>Papers</b></h4>
     <div class="w3-container">
     <p>Publications</p>
@@ -179,7 +179,7 @@
   </div>
 
   <!-- Graduate Research -->
-  <div class="w3-row-padding">
+  <div class="w3-container w3-row-padding">
     <h4 id="research"><b>Graduate Research</b></h4>
     <div class="w3-third w3-container w3-margin-bottom">
       <a class="weblink" href="./tda.html"><img src="./images/tda/kde.gif" alt="tda" style="width:100%" class="w3-hover-opacity"></a>
@@ -198,7 +198,7 @@
   </div>
   
   <!-- Undergraduate Research -->
-  <div class="w3-row-padding">
+  <div class="w3-container w3-row-padding">
     <h4><b>Undergraduate Research</b></h4>
     <!-- <div class="w3-third w3-container w3-margin-bottom">
       <a class="weblink" href="./resampling.html"><img src="./images/resampling/plane.gif" alt="resampling" style="width:100%" class="w3-hover-opacity"></a>
@@ -221,10 +221,12 @@
         <p>How well can you estimate the path of a LiDAR sensor given a scan of the terrain?</p>
       </div>
     </div>
+    <hr>
   </div>
 
   <!-- Software -->
-  <div class="w3-row-padding">
+  <br>
+  <div class="w3-container w3-row-padding">
     <h4 id="software"><b>Software</b></h4>
     <div class="w3-third w3-container w3-margin-bottom">
       <a class="weblink" href="./matrixschubert.html"><img src="./images/matrixschubert/pipe_dream.png" alt="matrixschubert" style="width:100%" class="w3-hover-opacity"></a>
@@ -233,10 +235,11 @@
         <p>A Macaulay2 package with functions for investigating ASM and matrix Schubert varieties.</p>
       </div>
     </div>
+    <hr>
   </div>
 
   <!-- Projects -->
-  <div class="w3-row-padding">
+  <div class="w3-container w3-row-padding">
     <h4 id="projects"><b>Projects</b></h4>
     <div class="w3-third w3-container w3-margin-bottom">
       <a class="weblink" href="./visualizations.html"><img src="./images/visualizations/twisted_cubic_surface_render.png" alt="twisted cubic" style="width:100%" class="w3-hover-opacity"></a>
