--- a/cocktails.html
+++ b/cocktails.html
@@ -17,71 +17,90 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
-
-    <!-- Sour Cocktails -->
-    <h2>Sour Cocktails</h2><br>
-    <div class="w3-row-padding w3-padding-16 w3-center" id="sours">
+  <!-- Featured Cocktails -->
+  <div class="w3-container">
+    <h2>Featured Cocktails</h2><br>
+    <div class="w3-row-padding w3-padding-16 w3-center" id="featured">
       <div class="w3-quarter">
         <img src="./images/cocktails/ply_and_pin.jpg" alt="Ply & Pin" style="width:100%">
-        <h3 style="text-align:left">Ply & Pin | $4</h3>
+        <h3 style="text-align:left">Ply & Pin</h3>
         <p><i>Bourbon, rye whiskey, falernum, cranberry juice, lime juice, Peychaud's bitters</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/pall_mall.png" alt="Pall Mall" style="width:100%">
-        <h3 style="text-align:left">Pall Mall | $3</h3>
-        <p><i>Applejack, rye whiskey, lemon juice, grenadine, orange slices, Angostura bitters</i></p>
+        <img src="./images/cocktails/bourbon_renewal.png" alt="Bourbon Renewal" style="width:100%">
+        <h3 style="text-align:left">Bourbon Renewal</h3>
+        <p><i>Brown butter-washed bourbon, crème de cassis, lemon juice, simple syrup, Angostura bitters</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/lions_tail.webp" alt="Lion's Tail" style="width:100%">
-        <h3 style="text-align:left">Lion's Tale | $4</h3>
-        <p><i>Bourbon, allspice dram, lime juice, simple syrup, Angostura bitters</i></p>
+        <img src="./images/cocktails/lions_tail.webp" alt="Division Bell" style="width:100%">
+        <h3 style="text-align:left">Division Bell</h3>
+        <p><i>Mezcal, Aperol, maraschino liqueur, lime juice</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/hibiscus_margarita.jpeg" alt="Hibiscus Margarita" style="width:100%">
-        <h3 style="text-align:left">Hibiscus Margarita | $3</h3>
-        <p><i>Sorel, blanco tequila, lime juice, agave syrup</i></p>
+        <!-- <img src="./images/cocktails/hibiscus_margarita.jpeg" alt="Pineapple Daiquiri" style="width:100%"> -->
+        <h3 style="text-align:left">Pineapple Daiquiri</h3>
+        <p><i>Plantation Stiggins' Fancy Pineapple Rum, lime juice, simple syrup</i></p>
       </div>
     </div>
-    <hr width="100%">
-    
-    <!-- Dessert Cocktails -->
-    <h2>Dessert Cocktails</h2><br>
-    <div class="w3-row-padding w3-padding-16 w3-center" id="desserts">
-      <div class="w3-quarter">
-        <img src="./images/cocktails/golden_cadillac.webp" alt="Golden Cadillac" style="width:100%">
-        <h3 style="text-align:left">Golden Cadillac | $3</h3>
-        <p><i>Galliano, crème de cacao, heavy cream</i></p>
-      </div>
-      <div class="w3-quarter">
-        <img src="./images/cocktails/toblerone.webp" alt="Golden Cadillac" style="width:100%">
-        <h3 style="text-align:left">Toblerone | $3</h3>
-        <p><i>Bailey's Irish cream, Frangelico, Kahlúa, heavy cream, honey syrup</i></p>
-      </div>
-      <div class="w3-quarter">
-        <img src="./images/cocktails/mudslide.webp" alt="Mudslide" style="width:100%">
-        <h3 style="text-align:left">Mudslide | $3</h3>
-        <p><i>Vodka, Kahlúa, Bailey's Irish cream, heavy cream</i></p>
-      </div>
-      <div class="w3-quarter">
-        <img src="./images/cocktails/snickertini.webp" alt="Golden Cadillac" style="width:100%">
-        <h3 style="text-align:left">Snickertini | $2</h3>
-        <p><i>Salted caramel vodka, amaretto, Bailey's Irish cream, crème de cacao, heavy cream</i></p>
-      </div>
-    </div>
-    <hr width="100%">
+  </div>
+  <hr width="100%">
 
-    <!-- Hot Cocktails -->
-    <h2>Hot Cocktails</h2><br>
-    <div class="w3-row-padding w3-padding-16 w3-center" id="sours">
+  <!-- Mocktails -->
+  <div class="w3-container">
+  <h2>Mocktails</h2><br>
+    <div class="w3-row-padding w3-padding-16 w3-center" id="mocktails">
       <div class="w3-quarter">
-        <img src="./images/cocktails/hot_buttered_rum.webp" alt="Hot Buttered Rum" style="width:100%">
-        <h3 style="text-align:left">Hot Buttered Rum | $2</h3>
-        <p><i>Blackstrap rum, butter, brown sugar, cinammon, clove, allspice</i></p>
+        <img src="./images/cocktails/dont_call_me_shirley.webp" alt="Hot Buttered Rum" style="width:100%">
+        <h3 style="text-align:left">Don't Call Me Shirley</h3>
+        <p><i>Lemon juice, lime juice, grenadine, club soda</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/boozy_hot_chocolate.webp" alt="Boozy Hot Chocolate" style="width:100%">
-        <h3 style="text-align:left">Boozy Hot Chocolate | $2</h3>
-        <p><i>Chocolate, milk, spirit of your choice, marshmallows</i></p>
+        <img src="./images/cocktails/heras_crown.webp" alt="Boozy Hot Chocolate" style="width:100%">
+        <h3 style="text-align:left">Hera's Crown</h3>
+        <p><i>Grenadine, orange juice, lemon juice, club soda</i></p>
       </div>
     </div>
+  </div>
+
+  <!-- Miscellaneous -->
+  <div class=""w3-container">
+    <h2>Wines and Others</h2>
+    <div class="w3-row-padding w3-padding-16">
+      <div class="w3-quarter" id="sparkling wines">
+        <h3>Sparkling Wines</h3>
+        <ul>
+          <li>Champagne Vieille France</li>
+          <li>NaCrilLà Moscato</li>
+          <li>Montcadi Cava Brut</li>
+          <li>Martinelli's Sparkling Bluch (non-alcoholic)</li>
+        </ul>
+      </div>
+      <div class="w3-quarter" id="sherrys">
+        <h3>Sherrys</h3>
+        <ul>
+          <li>Hartley & Gibson's Fino</li>
+          <li>Hartley & Gibson's Amontillado</li>
+          <li>Hartley & Gibson's Manzanilla</li>
+          <li>Lustau Oloroso</li>
+        </ul>
+      </div>
+      <div class="w3-quarter" id="vermouths">
+        <h3>Vermouths</h3>
+        <ul>
+          <li>Dolin Dry</li>
+          <li>Dolin Blanc</li>
+          <li>Dolin Rouge</li>
+          <li>Cocchi Storico Vermouth di Torino</li>
+        </ul>
+      </div>
+      <div class="w3-quarter" id="misc">
+        <h3>Miscellaneous</h3>
+        <ul>
+          <li>Lillet Blanc</li>
+          <li>Cocchi Americano</li>
+          <li>Camelot Mead</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
