Added some links and other items

--- a/cocktails.html
+++ b/cocktails.html
@@ -99,8 +99,22 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
           <li>Lillet Blanc</li>
           <li>Cocchi Americano</li>
           <li>Camelot Mead</li>
+          <li>Sierra Nevada Nooner Pilsner</li>
+          <li>Voodoo Ranger New Belgium IPA</li>
+          <li>Sierra Nevada Ruthless Rye IPA</li>
+          <li>Sierra Nevada Flipside Red IPA</li>
+          <li>Sierra Nevada Hop Hunter IPA</li>
         </ul>
       </div>
+    </div>
+  </div>
+
+  <div class="w3-container">
+    <h2>Other Links</h2>
+    <ul>
+      <li><a class="weblink" href="https://winter-guppy-136.notion.site/6aa1d7f2565141acbc9184c14f69be21?v=647a7206fdc042a89b896d5786834c2d">Cocktails Sean has rated</a></li>
+      <li><a class="weblink" href="https://winter-guppy-136.notion.site/a7e7113f27fa48299262fd048574d18e?v=46a925d46a494bd09b5fb5393dd7f2f8">All ingredients</a></li>
+    </ul>
     </div>
   </div>
 </div>
