Added more sparkling

--- a/cocktails.html
+++ b/cocktails.html
@@ -61,6 +61,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
       </div>
     </div>
   </div>
+  <hr width="100%">
 
   <!-- Miscellaneous -->
   <div class=""w3-container">
@@ -72,7 +73,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
           <li>Champagne Vieille France</li>
           <li>NaCrilLà Moscato</li>
           <li>Montcadi Cava Brut</li>
-          <li>Martinelli's Sparkling Bluch (non-alcoholic)</li>
+          <li>Martinelli's Sparkling Blush (non-alcoholic)</li>
+          <li>Martinelli's Sparkling Apple-Cranberry (non-alcoholic)</li>
+          <li>Martinelli's Sparkling Apple Cider (non-alcoholic)</li>
         </ul>
       </div>
       <div class="w3-quarter" id="sherrys">
@@ -108,6 +111,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
       </div>
     </div>
   </div>
+  <hr width="100%">
 
   <div class="w3-container">
     <h2>Other Links</h2>
