--- a/cocktails.html
+++ b/cocktails.html
@@ -22,24 +22,26 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     <h2>Featured Cocktails</h2><br>
     <div class="w3-row-padding w3-padding-16 w3-center" id="featured">
       <div class="w3-quarter">
-        <img src="./images/cocktails/ply_and_pin.jpg" alt="Ply & Pin" style="width:100%">
-        <h3 style="text-align:left">Ply & Pin</h3>
-        <p><i>Bourbon, rye whiskey, falernum, cranberry juice, lime juice, Peychaud's bitters</i></p>
+        <img src="./images/cocktails/pink_lady.webp" alt="Pink Lady" style="width:100%">
+        <h3 style="text-align:left">Pink Lady</h3>
+        <p><i>London dry gin, applejack, lemon juice, grenadine, egg white*</i></p>
+        <br>
+        <p style="text-align:left"><i>*optional, but recommended</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/bourbon_renewal.png" alt="Bourbon Renewal" style="width:100%">
-        <h3 style="text-align:left">Bourbon Renewal</h3>
-        <p><i>Brown butter-washed bourbon, crème de cassis, lemon juice, simple syrup, Angostura bitters</i></p>
+        <img src="./images/cocktails/hemingway_daiquiri.jfif" alt="Hemingway Daiquiri" style="width:100%">
+        <h3 style="text-align:left">Hemingway Daiquiri</h3>
+        <p><i>Light rum, grapefruit cordial, lime juice, maraschino liqueur</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/lions_tail.webp" alt="Division Bell" style="width:100%">
-        <h3 style="text-align:left">Division Bell</h3>
-        <p><i>Mezcal, Aperol, maraschino liqueur, lime juice</i></p>
+        <img src="./images/cocktails/bramble.jpeg" alt="Bramble" style="width:100%">
+        <h3 style="text-align:left">Bramble</h3>
+        <p><i>Gin, lemon juice, simple syrup, crème de mûre</i></p>
       </div>
       <div class="w3-quarter">
-        <!-- <img src="./images/cocktails/hibiscus_margarita.jpeg" alt="Pineapple Daiquiri" style="width:100%"> -->
-        <h3 style="text-align:left">Pineapple Daiquiri</h3>
-        <p><i>Plantation Stiggins' Fancy Pineapple Rum, lime juice, simple syrup</i></p>
+        <img src="./images/cocktails/hibiscus_margarita.jpeg" alt="Hibiscus Margarita" style="width:100%">
+        <h3 style="text-align:left">Hibiscus Margarita</h3>
+        <p><i>Sorel, tequila, lime juice, agave syrup</i></p>
       </div>
     </div>
   </div>
@@ -102,7 +104,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
           <li>Lillet Blanc</li>
           <li>Cocchi Americano</li>
           <li>Camelot Mead</li>
-          <li>Sierra Nevada Nooner Pilsner</li>
           <li>Voodoo Ranger New Belgium IPA</li>
           <li>Sierra Nevada Ruthless Rye IPA</li>
           <li>Sierra Nevada Flipside Red IPA</li>
