--- a/cocktails.html
+++ b/cocktails.html
@@ -22,26 +22,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
     <h2>Featured Cocktails</h2><br>
     <div class="w3-row-padding w3-padding-16 w3-center" id="featured">
       <div class="w3-quarter">
-        <img src="./images/cocktails/pink_lady.webp" alt="Pink Lady" style="width:100%">
-        <h3 style="text-align:left">Pink Lady</h3>
-        <p><i>London dry gin, applejack, lemon juice, grenadine, egg white*</i></p>
-        <br>
-        <p style="text-align:left"><i>*optional, but recommended</i></p>
+        <img src="./images/cocktails/italian_zombie.png" alt="Italian Zombie" style="width:100%">
+        <h3 style="text-align:left">Italian Zombie</h3>
+        <p><i>Gosling's Black Seal rum, Hamilton jamaican pot still black rum, Campari, apricot liqueur, passionfruit syrup, pineapple juice, lime juice, absinthe, Angostura bitters</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/hemingway_daiquiri.jfif" alt="Hemingway Daiquiri" style="width:100%">
-        <h3 style="text-align:left">Hemingway Daiquiri</h3>
-        <p><i>Light rum, grapefruit cordial, lime juice, maraschino liqueur</i></p>
+        <img src="./images/cocktails/kaiteur_swizzle.jpg" alt="Kaiteur Swizzle" style="width:100%">
+        <h3 style="text-align:left">Kaiteur Swizzle</h3>
+        <p><i>Pusser's rum, falernum, lime juice, maple syrup, Angostura bitters</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/bramble.jpeg" alt="Bramble" style="width:100%">
-        <h3 style="text-align:left">Bramble</h3>
-        <p><i>Gin, lemon juice, simple syrup, crème de mûre</i></p>
+        <img src="./images/cocktails/corn_n_oil.webp" alt="Corn n Oil" style="width:100%">
+        <h3 style="text-align:left">Corn 'n' Oil</h3>
+        <p><i>Gosling's Black Seal rum, falernum</i></p>
       </div>
       <div class="w3-quarter">
-        <img src="./images/cocktails/hibiscus_margarita.jpeg" alt="Hibiscus Margarita" style="width:100%">
-        <h3 style="text-align:left">Hibiscus Margarita</h3>
-        <p><i>Sorel, tequila, lime juice, agave syrup</i></p>
+        <img src="./images/cocktails/hibiscus_rum_punch.JPG" alt="Hibiscus Rum Punch" style="width:100%">
+        <h3 style="text-align:left">Hibiscus Rum Punch</h3>
+        <p><i>Denizen Merchant's Reserve rum, Sorel, demerera syrup, lime juice, seltzer</i></p>
       </div>
     </div>
   </div>
@@ -74,7 +72,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         <ul>
           <li>Champagne Vieille France</li>
           <li>NaCrilLà Moscato</li>
-          <li>Montcadi Cava Brut</li>
           <li>Martinelli's Sparkling Blush (non-alcoholic)</li>
           <li>Martinelli's Sparkling Apple-Cranberry (non-alcoholic)</li>
           <li>Martinelli's Sparkling Apple Cider (non-alcoholic)</li>
@@ -90,24 +87,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
         </ul>
       </div>
       <div class="w3-quarter" id="vermouths">
-        <h3>Vermouths</h3>
+        <h3>Fortified Wines</h3>
         <ul>
           <li>Dolin Dry</li>
           <li>Dolin Blanc</li>
           <li>Dolin Rouge</li>
-          <li>Cocchi Storico Vermouth di Torino</li>
-        </ul>
-      </div>
-      <div class="w3-quarter" id="misc">
-        <h3>Miscellaneous</h3>
-        <ul>
           <li>Lillet Blanc</li>
+          <li>Cocchi Storico Vermouth di Torino</li>
           <li>Cocchi Americano</li>
-          <li>Camelot Mead</li>
-          <li>Voodoo Ranger New Belgium IPA</li>
-          <li>Sierra Nevada Ruthless Rye IPA</li>
-          <li>Sierra Nevada Flipside Red IPA</li>
-          <li>Sierra Nevada Hop Hunter IPA</li>
         </ul>
       </div>
     </div>
